apps/generic/overlays/warm-corner/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: warm-corner
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
